<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/planet_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="planet_use_custom"
            android:summary="@string/planet_use_custom_summary"
            android:title="@string/use_custom_planet" />
        <Preference
            android:key="set_planet_file"
            android:title="@string/set_planet_file" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_network">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_use_cellular_data"
            android:title="@string/preferences_network_use_cell_data" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_disable_ipv6"
            android:summary="@string/preferences_network_disable_ipv6_summary"
            android:title="@string/preferences_network_disable_ipv6" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ztncui_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="ztncui_enable"
            android:title="@string/ztncui_enable" />
        <EditTextPreference
            android:key="ztncui_url"
            android:title="@string/ztncui_url"
            android:hint="@string/ztncui_url_hint" />
        <EditTextPreference
            android:key="ztncui_username"
            android:title="@string/ztncui_username" />
        <EditTextPreference
            android:key="ztncui_password"
            android:title="@string/ztncui_password"
            android:inputType="textPassword" />
    </PreferenceCategory>
</PreferenceScreen>
